<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="release">Release Date</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="director">Director</string>
    <string name="overview">Overview</string>
    <string name="runtime">Runtime</string>
    <string name="my_name">Prinanda Rahmatullah</string>
    <string name="my_email">prinanda50@gmail.com</string>
    <string name="about">About Me</string>
    <string name="item_photo">Item Photo</string>
    <string name="subs_2">DICODING MADE\nFinal Submission</string>
    <string name="change_language_setting">Language Setting</string>

    <string name="last_season">Release</string>
    <string name="creator">Creator</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="status">Status</string>
    <string name="network">Network</string>
    <string name="fav_tvshow">Fav TvShow</string>
    <string name="fav_movie">Fav Movie</string>
    <string name="delete">Delete</string>
    <string name="favorite">Favorite</string>
    <string name="fav_tv">Fav TV</string>

    <string name="language">en-US</string>
    <string name="reminder_setting">Reminder Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="daily_description">Movie Catalogue missing you!</string>
    <string name="daily_on">Daily notification is turned on</string>
    <string name="daily_off">Daily notification is turned off</string>
    <string name="today_release_on">Today release notification is turned on</string>
    <string name="today_release_off">Today release notification is turned off</string>
    <string name="today_release">has been release today!</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="daily_key">daily_key</string>
    <string name="release_key">release_key</string>
    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="daily_reminder_summary">Reminder for return to the app every 7 am</string>
    <string name="release_reminder_title">Today Release Reminder</string>
    <string name="release_reminder_summary">Reminder for showing movie that release today</string>
    <string name="search">Search</string>
    <string name="item_release">New Film Released</string>
    <string name="back_application">Don\'t Forget Open Application</string>
    <string name="film_release_today">Today\'s Film Released</string>
    <string name="daily_notification">Daily Notification</string>
    <string name="released_film">Released Film</string>
    <string name="release_notification">Release Notification</string>
    <string name="search_film">Search</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="new_film_release">New Film Release</string>
    <string name="reminder_preferences">Notification Setting</string>
    <string name="option_no">NO</string>
    <string name="option_yes">YES</string>
    <string name="daily_reminder_on">Daily Reminder Activated</string>
    <string name="daily_reminder_off">Daily Reminder Deactivated</string>
    <string name="release_reminder_on">Release Reminder Activated</string>
    <string name="release_reminder_off">Release Reminder Deactivated</string>
    <string name="no_data">No DATA</string>
    <string name="poster">Poster</string>
</resources>
